(test
 (name test_core)
 (modules test_core)
 (libraries alcotest melange-edn melange-edn.yojson))

(test
 (name test_json)
 (modules test_json)
 (libraries melange-edn melange-edn.yojson))

(executable
 (name test_jsoo)
 (modules test_jsoo)
 (modes js)
 (libraries js_of_ocaml melange-edn melange-edn.jsoo))

(melange.emit
 (target melange_edn_melange)
 (modules test_melange)
 (module_systems commonjs)
 (libraries melange-edn melange-edn.melange))

(rule
 (alias runtest)
 (enabled_if
  (= %{profile} dev))
 (deps
  (alias melange)
  test_jsoo.bc.js
  melange_edn_melange/test/test_melange.js)
 (action
  (progn
   (run node test_jsoo.bc.js)
   (run node melange_edn_melange/test/test_melange.js))))
